--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         ],
         "psr-4": {
             "App\\": "app/"
+            , "Main\\": "lib/classes/Main/"
         }
     },
     "autoload-dev": {
